Clarifications in cppp_exercises.pdf (see changelog.md)

--- a/exercises/latex/01_basics/problems/basics.tex
+++ b/exercises/latex/01_basics/problems/basics.tex
@@ -51,7 +51,8 @@ Verwende hierzu eine Schleife.
 
 \subsection{Erweiterung durch einen enum-Typen}
 \label{sec:basics_enumtype}
-Ein Aufzählungstyp (engl. enumerated type) ist ein Datentyp, dessen Wert auf eine definierte Menge begrenzt ist. Alle möglichen Werte werden bereits bei der Deklaration des Typs mit einem eindeutigen Namen angegeben. Um einen solchen Datentyp zu definieren, benutzt man das Schlüsselwort \lstinline{enum}: 
+Ein Aufzählungstyp (engl. enumerated type) ist ein Datentyp, dessen Wert auf eine definierte Menge begrenzt ist.
+Alle möglichen Werte werden bereits bei der Definition des Typs mit einem eindeutigen Namen angegeben. Um einen solchen Datentyp zu definieren, benutzt man das Schlüsselwort \lstinline{enum}: 
 
 \cpppInputListing{01_basics/problems/listings/basics_enum_example.cpp}
 
