--- a/exercises/latex/05_c/problems/cIntro.tex
+++ b/exercises/latex/05_c/problems/cIntro.tex
@@ -47,7 +47,7 @@ Um den zusätzlichen Schreibaufwand zu vermeiden, wird in der Praxis oft ein \ls
 
   \cpppInputListing{05_c/problems/listings/cintro_structs_typedef.c}
 
-Man kann die Deklaration eines \lstinline{struct} auch direkt in den \lstinline{typedef} einbauen:
+Man kann die Definition eines \lstinline{struct} auch direkt in den \lstinline{typedef} einbauen:
 
   \cpppInputListing{05_c/problems/listings/cintro_structs_short.c}
 
