printPattern in exercise sheet updated

--- a/exercises/latex/05_c/problems/mcDisplay.tex
+++ b/exercises/latex/05_c/problems/mcDisplay.tex
@@ -140,7 +140,7 @@ Diese Funktion ordnet auf dem Display Quadrate (4 x 4 Pixel) als Schachbrettmust
 Nutze die Funktion \lstinline|fillScreen|, um zunächst den Bildschirm in der Farbe \lstinline|backgroundColor| zu füllen.
 Nutze anschließend die Funktion \lstinline|fillRect|, um die einzelnen Quadrate in der Farbe \lstinline|foregroundColor| zu erzeugen.
 \item 
-Eine einfache Möglichkeit ist, zwei geschachtelte \lstinline|for|-Schleifen zu verwenden, die den Schleifenzähler jeweils um die doppelte Blockgröße weiterschalten.
+Eine einfache Möglichkeit ist, zwei geschachtelte \lstinline|for|-Schleifen zu verwenden, die den Schleifenzähler in X-Richtung jeweils um die  Blockgröße und in Y-Richtung um die doppelte Blockgröße weiterschalten.
 }
 
 
