Fix bug: argv[0] -> argv[1]

--- a/exercises/latex/02_memory/problems/arrays.tex
+++ b/exercises/latex/02_memory/problems/arrays.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = de_DE
 \section{\ExercisePrefixMemory Arrays und Zeigerarithmetik}
 \label{sec:arrays}
 \cpppSolutionName{arrays}{arrays}
@@ -163,7 +164,7 @@ Dies wird vom Betriebssystem sichergestellt, wenn dein Programm aufgerufen wird.
 Gib \lstinline{argv[0]} über \lstinline{std::cout} aus, um dieses Verhalten zu bestätigen.
 
 Passe deine Implementierung aus dem vorherigen Aufgabenteil so an, dass \lstinline{size} mithilfe der übergebenen Kommandozeilenparameter initialisiert wird (und nicht mehr über \lstinline{std::cin}).
-Nutze dazu die Funktion \lstinline{std::stoi} aus dem Header \lstinline{string}\footnote{\url{http://www.cplusplus.com/reference/string/stoi/}}, um \lstinline{argv[0]} in eine Ganzzahl zu konvertieren.
+Nutze dazu die Funktion \lstinline{std::stoi} aus dem Header \lstinline{string}\footnote{\url{http://www.cplusplus.com/reference/string/stoi/}}, um \lstinline{argv[1]} in eine Ganzzahl zu konvertieren.
 
 Was passiert, wenn du nun das Programm ausführst? 
 
