Fixes and additional microcontroller exercises

--- a/exercises/latex/05_c/problems/mcTouchScreen.tex
+++ b/exercises/latex/05_c/problems/mcTouchScreen.tex
@@ -1,5 +1,5 @@
 \section{\ExercisePrefixEmbeddedC Touchscreen ansteuern \optional}
-Eingebaut im mit dem Mikrocontroller verbundenen Bildschirm ist eine resistive 4-Wire Touchschicht.
+Eingebaut im mit dem Microcontroller verbundenen Bildschirm ist eine resistive 4-Wire Touchschicht.
 Der Name setzt sich zusammen aus den Eigenschaften dieser Schaltung.
 Resistiv steht für die Messung von Widerständen zum Erkennen von Touch-Gesten und 4-Wire bedeutet, dass für diese Technik vier Datenleitungen gebraucht werden.
 Ein resistiver 4-Wire-Touchscreen ist wie in Abbildung \ref{fig:rsTouch} aufgebaut.
