--- a/exercises/latex/05_c/problems/mcDHT11.tex
+++ b/exercises/latex/05_c/problems/mcDHT11.tex
@@ -3,6 +3,14 @@
 
 \optionaltextbox
 
+Für die folgende Aufgabe musst du dir folgendes zusätzliches Material bei den Betreuern beschaffen:
+\begin{itemize}
+\item DHT11 Temperatur- und Feuchtigkeitssensor
+\item 3 Steckbrücken Pin-Pin 20cm (jeweils ein verbundenes Steckbrückenpaar und eine einzelne Steckbrücke)
+\item 1 Steckbrücke Pin-Buchse 20cm
+\item 1 Widerstand \SI{10}{\kilo\ohm} (oder höher)
+\end{itemize}
+
 Der DHT11 ist ein Temperatur- und Feuchtigkeitssensor, der mithilfe des Steckplatine an den Microcontroller angeschlossen werden kann.
 Der DHT11 hat 4 Anschlüsse (Pins), von denen im Rahmen des Praktikums 3 verwendet werden.
 Zwei Pins werden für Masse (\lstinline|GND|) und Versorgungsspannung (\lstinline|VCC|) genutzt und ein Pin für die digitale Datenübertragung zwischen dem DHT11 und dem Microcontroller.
@@ -76,7 +84,7 @@ Nutze die Methoden \lstinline|writeTextln| und \lstinline|writeNumberOnDisplay| 
 
 \hints{
 	\item 
-	Falls du die Funktionen \lstinline|writeTextln| und \lstinline|writeNumberOnDisplay| noch nicht implementiert hast, kannst du die Methoden der Musterlösung mit der Konkatenation des Suffix \lstinline|_s| nutzen (also \lstinline|writeTextln_s|).
+	Falls du die Funktionen \lstinline|writeTextln| und \lstinline|writeNumberOnDisplay| noch nicht implementiert hast, kannst du die Methoden der Musterlösung mit der Konkatenation des Suffix \lstinline|_s| nutzen (also bspw. \lstinline|writeTextln_s| und \lstinline|writeNumberOnDisplay_s|).
 }
 
 \end{enumerate}
