--- a/exercises/latex/05_c/problems/cIntro.tex
+++ b/exercises/latex/05_c/problems/cIntro.tex
@@ -57,6 +57,9 @@ Anstelle von \lstinline{new} und \lstinline{delete} werden die Funktionen \lstin
 Diese sind im Header \filename{stdlib.h} deklariert.
 
   \cpppInputListing{05_c/problems/listings/cintro_mallocfree.c}
+  
+Der Cast des Ergebnisses von \lstinline|malloc| zu \lstinline|Point*| ist streng genommen nur notwendig, wenn du den gezeigten Code mit einem C++-Compiler kompilierst.
+Der C-Compiler nimmt die Konvertierung stillschweigend vor.
 
 \subsection{Ausgabe auf Konsole per \lstinline{printf}}
 \cpppSolutionName{microcontroller_c_basics}{micro\-con\-troller\_c\_bas\-ics}
@@ -79,7 +82,7 @@ Beginne mit einer leeren \lstinline|main|-Funktion.
 \item 
 Lege einen Puffer der Größe 8 an:
 \begin{lstlisting}
-char *buffer = malloc(8 * sizeof(char));
+char *buffer = (char*) malloc(8 * sizeof(char));
 \end{lstlisting}
 \item 
 Kopiere mittels \lstinline|strcpy| (aus dem Header \lstinline|string.h|) den String \lstinline|"Hello!!"| in den Puffer:
@@ -108,7 +111,7 @@ Du wirst allerdings nur das neu eingefügte Zeichen (\lstinline|'+'|) zusätzlic
 Um einen beeindruckenderen Effekt zu sehen, musst du selber dafür sorgen, dass der Speicher \enquote{sinnvolle} Daten enthält.
 Füge dazu den folgenden Code vor dem \lstinline|malloc|-Aufruf von \lstinline|buffer| ein.
 \begin{lstlisting}
-char *dummyBuffer = malloc(19 * sizeof(char));
+char *dummyBuffer = (char*) malloc(19 * sizeof(char));
 strcpy(dummyBuffer, "AlterTextAlterText");
 free(dummyBuffer);
 \end{lstlisting}
