Move table to bottom of page to improve readability

--- a/exercises/latex/05_c/problems/mcDisplay.tex
+++ b/exercises/latex/05_c/problems/mcDisplay.tex
@@ -9,7 +9,7 @@ Anschließend wirst du Funktionen implementieren, um auf dem Bildschirm regelmä
 Alle in dieser Aufgabe verwendeten Funktionen \textbf{müssen in der Datei \filename{display.c} implementiert werden}. 
 Tabelle \ref{tab:displayFunctions} dokumentiert das erwartete Verhalten der zu implementierenden Funktionen.
 %
-\begin{table}
+\begin{table}[b]
 	\centering
 	\caption{Wichtige Funktionen und Variablen für das Display}
 	\label{tab:displayFunctions}
