added new debugging exercise

--- a/exercises/latex/cppp_exercises.tex
+++ b/exercises/latex/cppp_exercises.tex
@@ -60,6 +60,8 @@ Zu Beginn jedes Themengebiets der Vortragsfolien ist vermerkt, welche Aufgaben z
 \newpage
 \input{02_memory/problems/linkedLists}
 \newpage
+\input{02_memory/problems/debugging}
+\newpage
 \input{02_memory/problems/exceptions}
 \newpage
 \input{02_memory/problems/smartPointers}
