Proofreading of debugging exercise

--- a/exercises/latex/02_memory/problems/debugging.tex
+++ b/exercises/latex/02_memory/problems/debugging.tex
@@ -11,12 +11,19 @@ Importiere dazu das Projekt unter folgendem Pfad: \cpppLinkToSampleSolution{debu
 
 Diese setzt du in CodeLite mit einem Linksklick der Zeile in welcher der Ablauf stoppen soll wie in den Zeilen~8 und~12 in \Cref{fig:breakpoints}. 
 Nutze für diese Aufgabe die Vorlage für das Debugging von \ref{sec:linked_list}. Starte den Debugger über \menuPath{Debugger \menuSep Start/Continue Debugger}.
-Du wirst sehen, dass die Ausführung in Zeile 8 stoppt, was durch den grünen Pfeil markiert wird. Mit einem Klick auf den Continue-Button lässt sich der Programmablauf fortsetzen. Mit next wird die aktuelle Zeile ausgeführt und der Programmzeiger springt in die nächste Zeile. Step in bewirkt, dass in die erste Zeile der aufgerufenen Methode gesprungen wird. Step Out führt den Code bis zum Return-Statement aus und springt zurück und setzt den Programmzeiger hinter die aufgerufene Funktion. Im Fenster rechts unten (Abbildung \ref{fig:locals_view}) kannst du die Werte der Variablen inspizieren und solltest sehen, dass current\_size beim ersten Breakpoint den Wert 2 besitzt. Zudem kannst du während dem Debugging über einen Rechtsklick auf eine Zeile und "Run to here"  den Code bis zu dieser ausführen.
+Du wirst sehen, dass die Ausführung in Zeile 8 stoppt, was durch den grünen Pfeil markiert wird. 
+Mit einem Klick auf den Continue-Button \includegraphics[height=1.5ex]{02_memory/figures/continueButton.png} lässt sich der Programmablauf fortsetzen.
+Mit dem Next-Button  \includegraphics[height=1.5ex]{02_memory/figures/stepOverButton.png} wird die aktuelle Zeile ausgeführt und der Programmzeiger springt in die nächste Zeile.
+Der Step-In-Button \includegraphics[height=1.5ex]{02_memory/figures/stepInButton.png} bewirkt, dass in die erste Zeile der aufgerufenen Funktion gesprungen wird.
+Der Step-Out-Button  \includegraphics[height=1.5ex]{02_memory/figures/stepOutButton.png} führt den Code bis zum \lstinline|return|-Statement aus und springt zurück und setzt den Programmzeiger hinter die aufgerufene Funktion.
+Im Fenster rechts unten (\Cref{fig:locals_view}) kannst du die Werte der Variablen inspizieren und solltest sehen, dass \lstinline|current_size| beim ersten Breakpoint den Wert 2 besitzt.
+Gegebenenfalls musst du die Ansicht mithilfe der blauen Schaltfläche \includegraphics[height=1.5ex]{02_memory/figures/updateLocalsButton.png} aktualisieren.
+Zudem kannst du während dem Debugging über einen Rechtsklick auf eine Zeile und den Menüeintrag \enquote{Run to here} den Code bis zu dieser Zeile ausführen.
  
 %Beispiel: linked list != Operator fehler einbauen und finden lassen. dabei vorgeben wo Breakpoint gesetzt werden soll und dann inspizieren lassen...
  
-Setze nun in Zeile 25 von \lstinline{main.cpp} einen Breakpoint und versuche mit Hilfe des Debuggingmodus den Fehler zu finden, den ein tollpatschiger Programmierer hinterlassen hat.
-
+Setze nun in Zeile 25 von \lstinline{main.cpp} einen Breakpoint und versuche mit Hilfe des Debuggers herauszufinden, warum die Liste nicht ausgegeben wird.
+%
 \begin{figure}
 	\centering
 	\includegraphics[width=.6\textwidth]{02_memory/figures/breakpoints.png}
@@ -47,5 +54,6 @@ Setze nun in Zeile 25 von \lstinline{main.cpp} einen Breakpoint und versuche mit
 %\end{figure}
 
 \hints{
-	\item Mit step in kannst du auch die Aufrufe sehen, welche im For-Schleifenkopf gemacht werden.
+	\item Mit dem Step-In-Button  \includegraphics[height=1.5ex]{02_memory/figures/stepInButton.png} kannst du auch die Aufrufe sehen, welche im \lstinline|for|-Schleifenkopf gemacht werden.
+    \item Überprüfe die Rückgabe von \lstinline|operator!=|.
 }
