Minor fixes and improvements after the lab

--- a/exercises/latex/03_oo/problems/inheritance.tex
+++ b/exercises/latex/03_oo/problems/inheritance.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = de_DE
 \section{\ExercisePrefixObjectOrientation Vererbung und Polymorphie}\label{sec:inheritance}
 \cpppSolutionName{inheritance_polymorphism}{in\-heri\-tance\_poly\-morphism}
 In dieser Aufgabe sollst du Konzepte der Vererbung und Polymorphie unter Verwendung abstrakter Funktionen erlernen.
@@ -34,7 +35,7 @@ Implementiere dann folgende Funktion und teste deine Implementation erneut, inde
 \cpppInputListing{03_oo/problems/listings/inheritance_person_info.hpp}
 
 \hints{
-    \item Dadurch dass \lstinline{Person} als \lstinline{const} Zeiger übergeben wird, können auch Unterklassen von \lstinline{Person}, wie z.B. \lstinline{Student}, übergeben werden. 
+    \item Dadurch dass \lstinline{Person} als Zeiger übergeben wird, können auch Unterklassen von \lstinline{Person}, wie z.B. \lstinline{Student}, übergeben werden. 
 }
 
 
