--- a/exercises/latex/01_basics/problems/intro.tex
+++ b/exercises/latex/01_basics/problems/intro.tex
@@ -2,18 +2,15 @@
 
 \section*{Einführung}
 Für alle Übungen des C/C++-Praktikums wird CodeLite als IDE verwendet. Als Compiler kommt Clang zum Einsatz.
-Eine Einführung in den Umgang mit CodeLite findet am ersten Praktikumstag statt.
 
 Die Materialien zur Vorlesung und Übung sind in einem GitHub-Repository zu finden: \url{https://github.com/Echtzeitsysteme/tud-cppp}.
 Dieses beinhaltet zum einen die Folien und die Programmbeispiele aus der Vorlesung und zum anderen diese Übungsblätter, Vorlagen für die letzten beiden Tage des Praktikums und alle Lösungen zu den Übungsaufgaben.
 
-Falls du mit dem Übungsblatt für den dafür vorgesehenen Tag innerhalb der Präsenzzeit fertig werden solltest, kannst du außerdem gerne mit dem nächsten Übungsblatt anfangen.
-
 \hints{
-\item Bei Fragen und Problemen aktiv um Hilfe bitten!
+\item Bei Fragen und Problemen bitte aktiv um Hilfe!
 \item Alle Lösungen zum C++-Teil enthalten ein Makefile und können entweder über die
 Kommandozeile mit Hilfe von \lstinline{make} kompiliert werden, oder in CodeLite, indem du sie als Projekt importierst.
-\item Folgende Shortcuts könnten sich dir im Verlauf des Praktikums als nützlich erweisen:
+\item Folgende Tastenkürzel könnten sich dir im Verlauf des Praktikums als nützlich erweisen:
 }
 
 
